# agile-monkeys-shop-application/src/main/java/com/brais/agilemonkeysshop/rest/controller/customer/controller/CustomerController.java
@@ -1,12 +1,23 @@
 package com.brais.agilemonkeysshop.rest.controller.customer.controller;
 
+import java.util.List;
+import java.util.Objects;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
 
 import com.agilemonkeys.shop.api.CustomerApi;
+import com.agilemonkeys.shop.model.CreateCustomerResponseDTO;
+import com.agilemonkeys.shop.model.CustomerDTO;
 import com.agilemonkeys.shop.model.CustomerListResponseDTO;
+import com.agilemonkeys.shop.model.DeleteCustomerResponseDTO;
+import com.agilemonkeys.shop.model.UpdateCustomerResponseDTO;
+import com.brais.agilemonkeysshop.customer.FullCustomer;
+import com.brais.agilemonkeysshop.customer.LiteCustomer;
+import com.brais.agilemonkeysshop.customer.config.CustomerPhotoConfig;
 import com.brais.agilemonkeysshop.customer.port.CustomerServicePort;
 import com.brais.agilemonkeysshop.rest.controller.customer.mapper.CustomerApiMapper;
 
@@ -20,30 +31,51 @@ public class CustomerController implements CustomerApi {
   @Autowired
   private CustomerApiMapper customerApiMapper;
 
+  @Autowired
+  private CustomerPhotoConfig customerPhotoConfig;
+
   @Override
   public ResponseEntity<CustomerListResponseDTO> findAll() {
-    CustomerListResponseDTO customerListResponseDTO = customerApiMapper.toCustomerListResponseDTO(customerServicePort.findAll());
+    List<LiteCustomer> customerList = customerServicePort.findAll();
+
+    CustomerListResponseDTO customerListResponseDTO = customerApiMapper.toCustomerListResponseDTO(customerList);
     return ResponseEntity.ok(customerListResponseDTO);
   }
 
-//  @Override
-//  public ResponseEntity<CreateCustomerResponseDTO> create(String name, String surname, MultipartFile photo) {
-//    if (photo.isEmpty()) {
-//      return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new CreateCustomerResponseDTO());
-//    }
-//
-//    String photoName = "";
-//    try {
-//
-//      // Get the file and save it somewhere
-//      byte[] bytes = photo.getBytes();
-//      photoName = name + "_" + surname + "_" + "id." + FilenameUtils.getExtension(photo.getOriginalFilename());
-//      Path path = Paths.get("C://temp//" + photoName);
-//      Files.write(path, bytes);
-//
-//    } catch (IOException e) {
-//      e.printStackTrace();
-//    }
-//    return ResponseEntity.ok(new CreateCustomerResponseDTO().id(photoName));
-//  }
+  @Override
+  public ResponseEntity<CustomerDTO> getFullInfo(String customerId) {
+    FullCustomer fullCustomer = customerServicePort.findById(customerId);
+    CustomerDTO customerDTO = customerApiMapper.toCustomerDTO(fullCustomer);
+
+    return ResponseEntity.ok(customerDTO);
+  }
+
+  @Override
+  public ResponseEntity<CreateCustomerResponseDTO> create(String id, String name, String surname, MultipartFile photo) {
+    FullCustomer fullCustomer = customerApiMapper.toFullCustomer(id, name, surname, photo, getPhotoUrlIfPhotoExists(photo));
+    FullCustomer fullCustomerCreated = customerServicePort.create(fullCustomer);
+
+    return ResponseEntity.ok(new CreateCustomerResponseDTO().id(fullCustomerCreated.id()));
+  }
+
+  @Override
+  public ResponseEntity<UpdateCustomerResponseDTO> update(String customerId, String name, String surname, MultipartFile photo) {
+    // TODO exception if photo is not MultipartFile (i.e.: photo instanceof Multipartfile)
+    FullCustomer fullCustomer = customerApiMapper.toFullCustomer(customerId, name, surname, photo, getPhotoUrlIfPhotoExists(photo));
+    FullCustomer fullCustomerUpdated = customerServicePort.update(fullCustomer);
+
+    return ResponseEntity.ok(new UpdateCustomerResponseDTO().id(fullCustomerUpdated.id()));
+  }
+
+  private String getPhotoUrlIfPhotoExists(MultipartFile photo) {
+    return photo != null && !Objects.requireNonNull(photo.getOriginalFilename()).isEmpty()
+        ? customerPhotoConfig.getPhotoUrl()
+        : null;
+  }
+
+  @Override
+  public ResponseEntity<DeleteCustomerResponseDTO> delete(String customerId) {
+    customerServicePort.delete(customerId);
+    return ResponseEntity.ok(new DeleteCustomerResponseDTO().id(customerId));
+  }
 }
